--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
   }
   
   .timer-container {
-  background-image: url(/dd.jpg);
+  background-image: url(/timer/dd.jpg);
   background-position: center;
   background-size:cover;
   background-repeat: no-repeat;
