--- a/styles.css
+++ b/styles.css
@@ -156,4 +156,20 @@
         color: #fff;
         font-size: 2.7rem;
     }
+    .timer-btn {
+        text-align: center;
+        margin-top: 5rem;
+        
+    }
+    .timer-count {
+        border: 1px solid #fff;
+        border-radius: 3px;
+        display:grid;
+        grid-template-columns: repeat(7, 1fr);
+        margin-top: 5rem;
+        padding: 3rem 1rem;
+        text-align: center;
+    }
+    
+    
 }
